--- a/configurator/jumpstarter.yml
+++ b/configurator/jumpstarter.yml
@@ -3,16 +3,19 @@
   gather_facts: false
 
   tasks:
+    - name: Check for run_once flag
+      become: true
+      stat:
+        path: ~/.run_once_cache_update
+      register: run_once_flag
+
     # The following task is just to ensure our Python bootstrapper doesn't
     # fail. The real apt-get cache with cache validity timeout appears
     # further down this playbook.
     - name: Update apt-get cache
       become: true
       raw: "apt-get -y -q update && touch ~/.run_once_cache_update"
-      args:
-        creates: ~/.run_once_cache_update
-      retries: 10
-      delay: 10
+      when: not run_once_flag.stat.exists
 
     - name: Check if Python is installed
       command: which python
